--- a/lib/locales/ro.json
+++ b/lib/locales/ro.json
@@ -7,5 +7,6 @@
 	"latest_articles": "Articole noi",
 	"popular_topics": "Subiecte populare",
 	"stats": "Statistici",
-  "articles": "Articole"
+	"articles": "Articole",
+	"top_articles": "top_articles"
 }
