--- a/lib/locales/en.json
+++ b/lib/locales/en.json
@@ -1,1 +1,8 @@
-{}
+{
+	"project_title": "project_title",
+	"project_description": "project_description",
+	"latest_articles": "latest_articles",
+	"popular": "popular",
+	"page_title_by_category": "page_title_by_category",
+	"page_description_by_category": "page_description_by_category"
+}
