--- a/lib/locales/ro.json
+++ b/lib/locales/ro.json
@@ -8,5 +8,5 @@
 	"popular_topics": "Subiecte populare",
 	"stats": "Statistici",
 	"articles": "Articole",
-	"top_articles": "top_articles"
+	"top_articles": "Topuri"
 }
