--- a/lib/locales/ro.json
+++ b/lib/locales/ro.json
@@ -8,5 +8,6 @@
 	"popular_topics": "Subiecte populare",
 	"stats": "Statistici",
 	"articles": "Articole",
-	"top_articles": "Topuri"
+	"top_articles": "Topuri",
+	"latest_tops": "Ultimele topuri"
 }
