--- a/lib/locales/ro.json
+++ b/lib/locales/ro.json
@@ -9,5 +9,9 @@
 	"stats": "Statistici",
 	"articles": "Articole",
 	"top_articles": "Topuri",
-	"latest_tops": "Ultimele topuri"
+	"latest_tops": "Ultimele topuri",
+	"project_languages": "Limbi",
+	"add_your_language": "Adaugă limba ta",
+	"about_us": "Despre noi",
+	"about_us_info": "Scriem articole cu statistici interesante."
 }
