--- a/lib/locales/en.json
+++ b/lib/locales/en.json
@@ -1,9 +1,13 @@
 {
-	"project_title": "project_title",
-	"project_description": "project_description",
-	"latest_articles": "latest_articles",
-	"popular": "popular",
-	"page_title_by_category": "page_title_by_category",
-	"page_description_by_category": "page_description_by_category",
-	"latest_tops": "latest_tops"
+	"project_title": "Openpeaks - Interesting statistics",
+	"project_description": "Interesting statistics and Facts. Society, Economy, Development, Entertainment.",
+	"latest_articles": "Latest articles",
+	"popular": "Popular",
+	"page_title_by_category": "%s - Interesting statistics",
+	"page_description_by_category": "%s - Interesting statistics and facts.",
+	"latest_tops": "New tops",
+	"project_languages": "Languages",
+	"add_your_language": "Add your language",
+  "about_us": "About us",
+  "about_us_info": "You write articles with interesting statistics."
 }
