script build/gulp

--- a/lib/locales/en.json
+++ b/lib/locales/en.json
@@ -9,5 +9,5 @@
 	"project_languages": "Languages",
 	"add_your_language": "Add your language",
   "about_us": "About us",
-  "about_us_info": "You write articles with interesting statistics."
+  "about_us_info": "We write articles with interesting statistics."
 }
