--- a/lib/locales/ro.json
+++ b/lib/locales/ro.json
@@ -13,5 +13,6 @@
 	"project_languages": "Limbi",
 	"add_your_language": "Adaugă limba ta",
 	"about_us": "Despre noi",
-	"about_us_info": "Scriem articole cu statistici interesante."
+	"about_us_info": "Scriem articole cu statistici interesante.",
+	"share_on_format": "share_on_format"
 }
