--- a/lib/locales/ro.json
+++ b/lib/locales/ro.json
@@ -14,5 +14,5 @@
 	"add_your_language": "Adaugă limba ta",
 	"about_us": "Despre noi",
 	"about_us_info": "Scriem articole cu statistici interesante.",
-	"share_on_format": "share_on_format"
+	"article_update_info": "Articolul se regenerează când există statistici noi."
 }
